--- a/public/homepage/css/style.css
+++ b/public/homepage/css/style.css
@@ -6,9 +6,13 @@
  * Made By MaterializeCSS.com
  */
 
+#icon-section {
+  opacity: 0.7;
+}
+
 nav ul a,
 nav .brand-logo {
-  color: #444;
+  color: rgb(216, 210, 210);
 }
 
 p {
