--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,39 +1,42 @@
-{{> header }}
-
-<main role="main">
-
-      <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <div class="container">
-          <h1 class="display-3">Login Page</h1>
-          
-        </div>
+<div class="row">
+  <div class="col-lg-12">
+    {{#if success_msg}}
+      <div class="alert alert-success">
+        {{success_msg}}
       </div>
+    {{/if}}
 
+    {{#if error_msg}}
+      <div class="alert alert-danger">
+        {{error_msg}}
+      </div>
+    {{/if}}
+
+    {{#if error}}
+      <div class="alert alert-danger">
+        {{error}}
+      </div>
+    {{/if}}
+  </div>
+</div>
 
 <div class="container">
-  <form method="POST" action="/login">
-      <div class="form-group">
-      <label for="username">Username</label>
-      <input type="text" name="username" class="form-control" placeholder="Username">   
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <h2>Login Form</h2>
+        <form class="login-user" method="post" action="/api/login">
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="email-input" placeholder="Email" name="email">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="password-input" placeholder="Password" name="password">
+          </div>
+          <button type="submit" class="btn btn-default">Login</button>
+        </form>
+        <br />
+        <p>Or sign up <a href="/signup">here</a></p>
       </div>
-
-      <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" name="password" class="form-control" placeholder="Password">   
-      </div>
-
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
-</div>
-      
-
-    </main>
-
-    <footer class="container">
-      <p>&copy; Company 2017-2018</p>
-    </footer>
-
-   
-  </body>
-</html>
+    </div>
+  </div>
