--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,50 +1,84 @@
-{{> header }}
+// {{> header }}
 
-<div class="container">
-	<h1>{{title}}</h1>
+// <div class="container">
+// 	<h1>{{title}}</h1>
 
-	{{#if errors}}
-		{{#each errors}}
-		<div class="alert alert-danger">
-			{{this.msg}}
-		</div>
-		{{/each}}
-	{{/if}}
+// 	{{#if errors}}
+// 		{{#each errors}}
+// 		<div class="alert alert-danger">
+// 			{{this.msg}}
+// 		</div>
+// 		{{/each}}
+// 	{{/if}}
 
-	<form method="POST" action="/register">
+// 	<form method="POST" action="/register">
 		
-		<div class="form-group">
-			<label for="firstName">First Name</label>
-			<input type="firstName" name="firstName" class="form-control" placeholder="First Name">  	
-	  	</div>
+// 		<div class="form-group">
+// 			<label for="firstName">First Name</label>
+// 			<input type="firstName" name="firstName" class="form-control" placeholder="First Name">  	
+// 	  	</div>
 
-	  	<div class="form-group">
-			<label for="username">Last Name</label>
-			<input type="text" name="lastName" class="form-control" placeholder="Last Name">  	
-	  	</div>
+// 	  	<div class="form-group">
+// 			<label for="username">Last Name</label>
+// 			<input type="text" name="lastName" class="form-control" placeholder="Last Name">  	
+// 	  	</div>
 
-		<div class="form-group">
-			<label for="username">Username</label>
-			<input type="text" name="username" class="form-control" placeholder="Username">  	
-	  	</div>
+// 		<div class="form-group">
+// 			<label for="username">Username</label>
+// 			<input type="text" name="username" class="form-control" placeholder="Username">  	
+// 	  	</div>
 
-	  	<div class="form-group">
-			<label for="email">Email</label>
-			<input type="email" name="email" class="form-control" placeholder="Email">  	
-	  	</div>
+// 	  	<div class="form-group">
+// 			<label for="email">Email</label>
+// 			<input type="email" name="email" class="form-control" placeholder="Email">  	
+// 	  	</div>
 
-	  	<div class="form-group">
-			<label for="password">Password</label>
-			<input type="password" name="password" class="form-control" placeholder="Password">  	
-	  	</div>
+// 	  	<div class="form-group">
+// 			<label for="password">Password</label>
+// 			<input type="password" name="password" class="form-control" placeholder="Password">  	
+// 	  	</div>
 
-	  	<div class="form-group">
-			<label for="passwordMatch">Re-Enter Password</label>
-			<input type="password" name="passwordMatch" class="form-control" placeholder="Password">  	
-	  	</div>
+// 	  	<div class="form-group">
+// 			<label for="passwordMatch">Re-Enter Password</label>
+// 			<input type="password" name="passwordMatch" class="form-control" placeholder="Password">  	
+// 	  	</div>
 
-		<button type="submit" class="btn btn-primary">Submit</button>
-	</form>
+// 		<button type="submit" class="btn btn-primary">Submit</button>
+// 	</form>
 
-	{{> footer-end }}
-</div>
+// 	{{> footer-end }}
+// </div>
+
+{{#if errors}}
+  {{#each errors}}
+    <div class="alert alert-danger">
+      {{msg}}
+    </div>
+  {{/each}}
+{{/if}}
+<div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <h2>Sign Up Form</h2>
+        <form class="signup" method="post" action="create_newUser">
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="signup-email-input" placeholder="Email" name="email">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="signup-password-input" placeholder="Password" name="password">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="confirm-password-input" placeholder="Confirm Password" name="password2">
+          </div>
+
+          <button type="submit" class="btn btn-default signup-submit">Sign Up</button>
+        </form>
+        <br />
+        <p>Or log in <a href="/login">here</a></p>
+      </div>
+    </div>
+  </div>
+
